Actividad-Semana-6/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
spec:
  ingressClassName: nginx  # Asegura que este Ingress use el controlador NGINX
  rules:
  - http:
      paths:
      - path: /app1
        pathType: Prefix
        backend:
          service:
            name: app1-service
            port:
              number: 8081
      - path: /app2
        pathType: Prefix
        backend:
          service:
            name: app2-service
            port:
              number: 8082
      - path: /app3
        pathType: Prefix
        backend:
          service:
            name: app3-service
            port:
              number: 8083
